# floor_estimate_mason

./: .gitignore  README.md  README_deploy.md
ESP32_Barometer-main/: .gitignore  platformio.ini  prebuild.py
ESP32_Barometer-main/include/: config.h  floor_estimator_config.h
ESP32_Barometer-main/lib/HP206C_Library/: HP206C.cpp  HP206C.h
ESP32_Barometer-main/src/: barometer_node.cpp  barometer_node_s3.cpp  config.cpp
ESP32_Barometer-main/src_files/: barometer_node.cpp  barometer_node_s3.cpp
ESP32_Barometer-main/tools/: calc_offsets_eq89.py  offset-floorindex-config-zh.md  realtime_floor_validation.py
ros_barometer-main/: .gitignore
ros_barometer-main/barometer_interfaces/: CMakeLists.txt  package.xml
ros_barometer-main/barometer_interfaces/msg/: Barometer.msg  ZMotion.msg
ros_barometer-main/serial_to_ros2/: package.xml  setup.py
ros_barometer-main/serial_to_ros2/config/: esp32_serial_baro.yaml
ros_barometer-main/serial_to_ros2/launch/: baro_p_alti_launch.py
ros_barometer-main/serial_to_ros2/serial_to_ros2/: esp32_serial_baro.py
