<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>serial_to_ros2</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="zhangyh12024@shanghaitech.edu.cn">witsir</maintainer>
  <license>Apache-2.0</license>

  <build_depend>barometer_interfaces</build_depend>
  <exec_depend>barometer_interfaces</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
